# src/routes/index.js
@@ -2,6 +2,8 @@ const router = require("express").Router();
 const leadRoutes = require("./leadRoutes");
 const companyRoutes = require("./companyRoutes");
 const authRoutes = require("./authRoutes");
+const campaignRoutes = require("./campaignRoutes");
+const tagRoutes = require("./tagRoutes");
 
 router.get("/", (req, res) => {
   //#swagger.tags=["Home"]
@@ -14,5 +16,7 @@ router.get("/", (req, res) => {
 router.use("/", authRoutes);
 router.use("/leads", leadRoutes);
 router.use("/companies", companyRoutes);
+router.use("/campaigns", campaignRoutes);
+router.use("/tags", tagRoutes);
 
 module.exports = router;
